taass/backupProgetto/Pogetto-TAASS(michele)/Spikes/Spike Kubernetes/other/fatti con aldo/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mymusicspace
  name: api-gateway-service
  labels:
    app: api-gateway-service
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: api-gateway-service
  type: LoadBalancer
