taass/backupProgetto/Pogetto-TAASS(michele)/Spikes/Spike Kubernetes/other/fatti con aldo/api-gateway-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  namespace: mymusicspace
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-origins: "http://shop.example.com.192.168.49.2.nip.io"
    nginx.ingress.kubernetes.io/cors-methods: PUT, DELETE, POST, GET, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization, Content-Type, Origin
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://shop.example.com.192.168.49.2.nip.io"
  name: api-gateway-service
spec:
  #tls:
  # - hosts:
  #     - api-gateway-service.192.168.49.2.nip.io
  rules:
    - host: api-gateway-service.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8080
